Blackpurl/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AdditionalNotes__c</fullName>
        <description>Additional Notes For Job Schedule Event</description>
        <label>AdditionalNotes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_Concern__c</fullName>
        <label>Appointment Concern</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_Day_Segment__c</fullName>
        <label>Appointment Day Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Owned_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Owned Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Concern__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup of Generic Notes record, which stores concerns for the event.</description>
        <label>Event Concern</label>
        <referenceTo>Notes__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsMultiDayEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Job Scheduling Event is All Day Event ?</description>
        <label>IsMultiDayEvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Pay</fullName>
                </value>
                <value>
                    <fullName>Internal Expense</fullName>
                </value>
                <value>
                    <fullName>Third-Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes for Job Schedule Event</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Job Reference</description>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Technician__c.Type__c</field>
                <operation>equals</operation>
                <value>Technician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Type</label>
        <referenceTo>Transaction_Type__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>